# switch-hub

./: LICENSE  pyproject.toml
src/switch-hub/: main.py
