[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "switch-hub"
version = "0.0.1"
authors = [
    { name = "Dmitry Radionov", email = "radionovdmr@gmail.com" },
]
description = "Toggle Huggingface Hub and Cloud.ru Repo"
readme = "README.md"
requires-python = ">=3.9.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Gravi7ON/switch-hub"
Issues = "https://github.com/Gravi7ON/switch-hub/issues"